--- a/styles/sass/_mobile.scss
+++ b/styles/sass/_mobile.scss
@@ -66,7 +66,7 @@
         position: absolute;
         align-items: center;
         justify-content: center;
-        right: 9%;
+        right: 9.5%;
         top: 17%;
             li {
                 margin-left: 0;
@@ -123,12 +123,19 @@
         }
     }
 
+    .contact-form div {
+        flex-direction: column;
+            input:nth-child(2) {
+                margin-bottom: 35px;
+            }
+    }
+
     input {
-        width: 45%;
+        width: 100%;
     }
 
     textarea {
-        width: 93.5%;
+        width: 100%;
     }
 
     footer .social-links {
