--- a/styles/style.css
+++ b/styles/style.css
@@ -420,6 +420,9 @@ header {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   border-bottom: 1px solid #BCBCBC;
 }
 
@@ -449,9 +452,6 @@ header {
 }
 
 .menu {
-  position: absolute;
-  right: 10%;
-  top: 3%;
   display: none;
 }
 
@@ -783,7 +783,7 @@ footer p {
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
-    right: 9%;
+    right: 9.5%;
     top: 17%;
   }
   .header-links-mobile li {
@@ -846,11 +846,20 @@ footer p {
         -ms-flex-order: 0;
             order: 0;
   }
+  .contact-form div {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .contact-form div input:nth-child(2) {
+    margin-bottom: 35px;
+  }
   input {
-    width: 45%;
+    width: 100%;
   }
   textarea {
-    width: 93.5%;
+    width: 100%;
   }
   footer .social-links {
     width: 100%;
